--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
             <p class="subtitle">Server Hardware & Equipment Management System</p>
         </header>
 
+        <!-- Navigation Menu -->
+        <nav class="nav-menu">
+            <a href="index.html" class="nav-link active">
+                <span>🖥️</span> Products
+            </a>
+            <a href="packages.html" class="nav-link">
+                <span>📦</span> Packages
+            </a>
+        </nav>
+
         <div class="controls">
             <button id="addProductBtn" class="btn btn-primary">
                 <span>➕</span> Add New Product
